--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
 <body>
 
-  <h1>🛒 E-Commerce API Tester</h1>
+  <h1>E-Commerce API Tester</h1>
 
   <div class="container">
     <div class="left">
       <!-- View & Search -->
       <div class="section">
-        <h2>🔍 View & Search</h2>
+        <h2>View & Search</h2>
         <button onclick="getProducts()">Get All Products</button>
         <button onclick="getUsers()">Get All Users</button>
         <button onclick="getOrders()">Get All Orders</button>
