--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
       html += `
         <li>
             <strong>Name:</strong> ${result.name}<br>
-            <strong>Category:</strong> ${result._id}<br>
+            <strong>ID:</strong> ${result._id}<br>
             <strong>Price:</strong> ${result.category}<br>
             <strong>Inventory:</strong> ${result.price}
         </li>`;
